--- a/public/index.html
+++ b/public/index.html
@@ -4,27 +4,13 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>  
+    <link rel="icon" type="image/x-icon" href="./assets/faviconV2.png">
+    <script src="https://kit.fontawesome.com/cafa369b92.js" crossorigin="anonymous"></script>
+    <title>Wow Skin Science</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -40,4 +26,47 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script>
+
+window.onload = ()=>{
+    setTimeout(()=>{
+        let celcius_data=document.getElementById("celcius");
+        if(navigator.geolocation){
+            navigator.geolocation.getCurrentPosition((locationData)=>{
+                let lat=locationData.coords.latitude;
+                let lon=locationData.coords.longitude;
+                const url=`https://api.openweathermap.org/data/2.5/forecast/daily?lat=${lat}&lon=${lon}&mode=json&units=metric&cnt=5&appid=fbf712a5a83d7305c3cda4ca8fe7ef29`;
+                 //api calling
+                 fetch(url,{method:"GET"})
+                  // return promise
+                 .then((res)=>res.json())
+                  // resolve promise
+                 .then((data)=>{
+                    let temp = data.list[0].temp.day;
+                    let icon=data.list[0].weather[0].icon;
+                    document.getElementById("weather_img").innerHTML=`<img src=http://openweathermap.org/img/w/${icon}.png>`
+                    celcius_data.innerText = `${temp}°C`
+                 })
+                 .catch((err) => {
+                     console.log(err)
+                 })
+            })
+        }
+        else{
+            celcius.innerText="geo is not supported"
+        }
+        setTimeout(()=>{
+        document.querySelector(".coupon").style.display="block";
+        document.querySelector(".main_page").style.opacity="0.7";
+
+    },9000)
+    },3000)
+}
+
+
+
+
+
+
+  </script>
 </html>
