--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,8 @@ window.onload = ()=>{
         setTimeout(()=>{
         document.querySelector(".coupon").style.display="block";
         document.querySelector(".main_page").style.opacity="0.7";
+        document.querySelector("#root").style.position ="fixed";
+
 
     },9000)
     },3000)
